--- a/site/europe10.html
+++ b/site/europe10.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link href="../site/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
 
-  <link href="../site/style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="../site/style.css" />
 
-  <link href="../highlightjs/styles/default.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
   
   <script src="../highlightjs/highlight.pack.js"> </script>
@@ -48,84 +48,84 @@
 <p>So much for Barcelona; boy am I tired. Our last day in Madrid we went to a
 cafe; on the fourteenth floor of a hotel "Dear Hotel," (with the comma) to
 enjoy the view and have a rather early glass of wine:</p>
-<p><img alt="" src="../site/europe10-11_small.jpg" /></p>
+<p><img src="../site/europe10-11_small.jpg" alt="" /></p>
 <p>Then it was off to the train station to board my first high speed train, which
 travels at high speed. The speed looks like this:</p>
-<p><img alt="" src="../site/europe10-13_small.jpg" /></p>
+<p><img src="../site/europe10-13_small.jpg" alt="" /></p>
 <p>and the views are generally gorgeous:</p>
-<p><img alt="" src="../site/europe10-12_small.jpg" /></p>
+<p><img src="../site/europe10-12_small.jpg" alt="" /></p>
 <p>When we arrived in Barcelona, we took the metro to our Airbnb host, who did not
 speak English (nor much Spanish!), so that was interesting. Then it was out to
 the main popular section of town for dinner and drinks, where we met an Indian
 bartender who we chatted with until he closed the place.</p>
 <p>Day two it was off to the sights. We went to this Gaudi park museum house
 thing. There was some cool stuff:</p>
-<p><img alt="" src="../site/europe10-15_small.jpg" /></p>
-<p><img alt="" src="../site/europe10-14_small.jpg" /></p>
-<p><img alt="" src="../site/europe10-17_small.jpg" /></p>
+<p><img src="../site/europe10-15_small.jpg" alt="" /></p>
+<p><img src="../site/europe10-14_small.jpg" alt="" /></p>
+<p><img src="../site/europe10-17_small.jpg" alt="" /></p>
 <p>A little later we headed towards Las Ramblas to walk around and see stuff.
 Stuff:</p>
-<p><img alt="" src="../site/europe10-16_small.jpg" /></p>
-<p><img alt="" src="../site/europe10-21_small.jpg" /></p>
+<p><img src="../site/europe10-16_small.jpg" alt="" /></p>
+<p><img src="../site/europe10-21_small.jpg" alt="" /></p>
 <p>Here's another homage to Columbus. He's standing, pointing towards (presumably)
 the New World. I feel like he is pointing East, though, since we're on the
 Mediterranean side and there's the beach.</p>
-<p><img alt="" src="../site/europe10-19_small.jpg" /></p>
+<p><img src="../site/europe10-19_small.jpg" alt="" /></p>
 <p>There is ocean:</p>
-<p><img alt="" src="../site/europe10-26_small.jpg" /></p>
+<p><img src="../site/europe10-26_small.jpg" alt="" /></p>
 <p>Then with our aching feet we climbed to get to the entrance of a cable car so
 we could see everything from above. The hill we had to get up offered some nice
 views, too:</p>
-<p><img alt="" src="../site/europe10-22_small.jpg" /></p>
-<p><img alt="" src="../site/europe10-24_small.jpg" /></p>
+<p><img src="../site/europe10-22_small.jpg" alt="" /></p>
+<p><img src="../site/europe10-24_small.jpg" alt="" /></p>
 <p>And then from the cable car:</p>
-<p><img alt="" src="../site/europe10-27_small.jpg" /></p>
-<p><img alt="" src="../site/europe10-28_small.jpg" /></p>
+<p><img src="../site/europe10-27_small.jpg" alt="" /></p>
+<p><img src="../site/europe10-28_small.jpg" alt="" /></p>
 <p>A lot of young couples in Barcelona. Bring your own babe.</p>
 <p>Then we walked over to the beach. I took off my shoes and walked around. Here's
 the sea:</p>
-<p><img alt="" src="../site/europe10-29_small.jpg" /></p>
+<p><img src="../site/europe10-29_small.jpg" alt="" /></p>
 <p>Then it was back to the Airbnb for a siesta in anticipation of all of the fish
 we were going to have for dinner:</p>
-<p><img alt="" src="../site/europe10-30_small.jpg" /></p>
+<p><img src="../site/europe10-30_small.jpg" alt="" /></p>
 <p>No fish was safe that night.</p>
 <p>There's other pretty stuff around the city. We rented bikes at some point and
 rode around the parks until we hit the beach.</p>
-<p><img alt="" src="../site/europe10-31_small.jpg" /></p>
-<p><img alt="" src="../site/europe10-32_small.jpg" /></p>
+<p><img src="../site/europe10-31_small.jpg" alt="" /></p>
+<p><img src="../site/europe10-32_small.jpg" alt="" /></p>
 <p>Are those bats wearing armor?</p>
-<p><img alt="" src="../site/europe10-33_small.jpg" /></p>
+<p><img src="../site/europe10-33_small.jpg" alt="" /></p>
 <p>Anyway,</p>
-<p><img alt="" src="../site/europe10-34_small.jpg" /></p>
+<p><img src="../site/europe10-34_small.jpg" alt="" /></p>
 <p>I made a dinosaur friend:</p>
-<p><img alt="" src="../site/europe10-1_small.jpg" /></p>
+<p><img src="../site/europe10-1_small.jpg" alt="" /></p>
 <p>The big sightseeing attraction in Barcelona is the Basilica. It's a big deal. I
 didn't know this, but they've been building it for well over 100 years. It's
 scheduled for completion in 2026, I imagine just before the Second Avenue
 Subway opens. But look at the thing:.</p>
-<p><img alt="" src="../site/europe10-2_small.jpg" /></p>
-<p><img alt="" src="../site/europe10-3_small.jpg" /></p>
-<p><img alt="" src="../site/europe10-4_small.jpg" /></p>
-<p><img alt="" src="../site/europe10-5_small.jpg" /></p>
+<p><img src="../site/europe10-2_small.jpg" alt="" /></p>
+<p><img src="../site/europe10-3_small.jpg" alt="" /></p>
+<p><img src="../site/europe10-4_small.jpg" alt="" /></p>
+<p><img src="../site/europe10-5_small.jpg" alt="" /></p>
 <p>Ready to head inside? Are you wearing your diaper?</p>
-<p><img alt="" src="../site/europe10-6_small.jpg" /></p>
-<p><img alt="" src="../site/europe10-7_small.jpg" /></p>
-<p><img alt="" src="../site/europe10-8_small.jpg" /></p>
-<p><img alt="" src="../site/europe10-9_small.jpg" /></p>
-<p><img alt="" src="../site/europe10-10_small.jpg" /></p>
+<p><img src="../site/europe10-6_small.jpg" alt="" /></p>
+<p><img src="../site/europe10-7_small.jpg" alt="" /></p>
+<p><img src="../site/europe10-8_small.jpg" alt="" /></p>
+<p><img src="../site/europe10-9_small.jpg" alt="" /></p>
+<p><img src="../site/europe10-10_small.jpg" alt="" /></p>
 <p>Here's the back. The idea is that the front entrance is all about the Nativity,
 and the rear is all about the crucifixion. We did the audio tour.</p>
-<p><img alt="" src="../site/europe10-18_small.jpg" /></p>
+<p><img src="../site/europe10-18_small.jpg" alt="" /></p>
 <p>Here's more detail on the front:</p>
-<p><img alt="" src="../site/europe10-20_small.jpg" /></p>
+<p><img src="../site/europe10-20_small.jpg" alt="" /></p>
 <p>Goudi was totally stoked on Jesus. Couldn't get enough of him.</p>
 <p>The rest of the trip was wandering around the Gothic Quarter at night, eating
 and seeing what's around:</p>
-<p><img alt="" src="../site/europe10-23_small.jpg" /></p>
+<p><img src="../site/europe10-23_small.jpg" alt="" /></p>
 <p>There was this festival going on in the main park, so we went there and saw all
 of this live music and interesting art installations. You want to see more of
 the Basilica, don't you?</p>
-<p><img alt="" src="../site/europe10-25_small.jpg" /></p>
+<p><img src="../site/europe10-25_small.jpg" alt="" /></p>
 <p>Now it's a just-under three-hour flight to Stockholm, where presumably we will
 eat meatballs and shop for furniture. The snack guy is coming around I NEED
 COFFEE.</p>
