--- a/site/europe13.html
+++ b/site/europe13.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link href="../site/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
 
-  <link href="../site/style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="../site/style.css" />
 
-  <link href="../highlightjs/styles/default.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
   
   <script src="../highlightjs/highlight.pack.js"> </script>
@@ -49,42 +49,42 @@ Fortunately, in addition to being an airplane, the vessel will be also a
 time machine, so I'll arrive in New York only two hours after departing.</p>
 <p>We stayed just outside of central Stockholm at a friend's apartment, which
 has a balcony whose view is this:</p>
-<p><img alt="" src="../site/europe13-1_small.jpg" /></p>
+<p><img src="../site/europe13-1_small.jpg" alt="" /></p>
 <p>Our host looks like this:</p>
-<p><img alt="" src="../site/europe13-3_small.jpg" /></p>
+<p><img src="../site/europe13-3_small.jpg" alt="" /></p>
 <p>The first full day he took us around in his car to see some scenic areas of
 Stockholm:</p>
-<p><img alt="" src="../site/europe13-2_small.jpg" /></p>
+<p><img src="../site/europe13-2_small.jpg" alt="" /></p>
 <p>and we went to a museum about this old boat they found buried in the ocean
 and managed to restore with 98% of the original material. There were floors
 in the museum on things like the curing process used in the waterlogged
 wood, the skeletons of the crew, and a bunch of other interesting stuff that
 you wouldn't expect to find explained in such detail. I rather liked it. The
 boat itself is gigantic:</p>
-<p><img alt="" src="../site/europe13-5_small.jpg" /></p>
+<p><img src="../site/europe13-5_small.jpg" alt="" /></p>
 <p>The following day we drove out to a boat to take a ferry to one of
 Stockholm's many islands. It was a nice ride:</p>
-<p><img alt="" src="../site/europe13-4_small.jpg" /></p>
-<p><img alt="" src="../site/europe13-7_small.jpg" /></p>
+<p><img src="../site/europe13-4_small.jpg" alt="" /></p>
+<p><img src="../site/europe13-7_small.jpg" alt="" /></p>
 <p>Once on the island, we took a cable barge to a smaller island where there's
 an old fort:</p>
-<p><img alt="" src="../site/europe13-6_small.jpg" /></p>
-<p><img alt="" src="../site/europe13-9_small.jpg" /></p>
-<p><img alt="" src="../site/europe13-8_small.jpg" /></p>
-<p><img alt="" src="../site/europe13-12_small.jpg" /></p>
-<p><img alt="" src="../site/europe13-10_small.jpg" /></p>
-<p><img alt="" src="../site/europe13-11_small.jpg" /></p>
-<p><img alt="" src="../site/europe13-13_small.jpg" /></p>
+<p><img src="../site/europe13-6_small.jpg" alt="" /></p>
+<p><img src="../site/europe13-9_small.jpg" alt="" /></p>
+<p><img src="../site/europe13-8_small.jpg" alt="" /></p>
+<p><img src="../site/europe13-12_small.jpg" alt="" /></p>
+<p><img src="../site/europe13-10_small.jpg" alt="" /></p>
+<p><img src="../site/europe13-11_small.jpg" alt="" /></p>
+<p><img src="../site/europe13-13_small.jpg" alt="" /></p>
 <p>Hobbits live there:</p>
-<p><img alt="" src="../site/europe13-14_small.jpg" /></p>
+<p><img src="../site/europe13-14_small.jpg" alt="" /></p>
 <p>Then we took the ferry back around sundown:</p>
-<p><img alt="" src="../site/europe13-15_small.jpg" /></p>
+<p><img src="../site/europe13-15_small.jpg" alt="" /></p>
 <p>and headed into a pub in the city center to watch the "Sweden versus Europe"
 world hockey semi-final. Sweden lost. C'est la vie. The city looks nice at
 dusk:</p>
-<p><img alt="" src="../site/europe13-16_small.jpg" /></p>
+<p><img src="../site/europe13-16_small.jpg" alt="" /></p>
 <p>and they have balloons:</p>
-<p><img alt="" src="../site/europe13-17_small.jpg" /></p>
+<p><img src="../site/europe13-17_small.jpg" alt="" /></p>
 <p>I have so far resisted the cesspool of disease otherwise known as Vineet,
 but we'll see how I fare waking up for work tomorrow. Ciao.</p>
 <table class="series">
