--- a/site/europe7.html
+++ b/site/europe7.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link href="../site/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
 
-  <link href="../site/style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="../site/style.css" />
 
-  <link href="../highlightjs/styles/default.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
   
   <script src="../highlightjs/highlight.pack.js"> </script>
@@ -47,33 +47,33 @@
 <p>Greetings from Gatwick,</p>
 <p>The flight into Madrid is a bit late. I'll take this time to catch you up on
 what I did in London. For example, at some point we encountered a monument:</p>
-<p><img alt="" src="../site/europe7-1_small.jpg" /></p>
+<p><img src="../site/europe7-1_small.jpg" alt="" /></p>
 <p>I daresay it was monumental. Here's what it looks like with the sun behind it:</p>
-<p><img alt="" src="../site/europe7-3_small.jpg" /></p>
+<p><img src="../site/europe7-3_small.jpg" alt="" /></p>
 <p>That day we also walked along the Thames and saw Tower Bridge from London
 Bridge:</p>
-<p><img alt="" src="../site/europe7-2_small.jpg" /></p>
+<p><img src="../site/europe7-2_small.jpg" alt="" /></p>
 <p>and Tower Bridge from Tower Bridge:</p>
-<p><img alt="" src="../site/europe7-5_small.jpg" /></p>
+<p><img src="../site/europe7-5_small.jpg" alt="" /></p>
 <p>There were interesting alleys:</p>
-<p><img alt="" src="../site/europe7-4_small.jpg" /></p>
+<p><img src="../site/europe7-4_small.jpg" alt="" /></p>
 <p>and vintage dental equipment (at the science museum):</p>
-<p><img alt="" src="../site/europe7-7_small.jpg" /></p>
+<p><img src="../site/europe7-7_small.jpg" alt="" /></p>
 <p>Later that day we met up with some Bloomberg people (we're everywhere) for a
 few pints and a burger. Even one of my New York based managers showed up. Small
 world.</p>
 <p>The next day we took a train out to Greenwich, where the time is mean. The
 ceiling paintings and chapels are less mean, however:</p>
-<p><img alt="" src="../site/europe7-6_small.jpg" /></p>
-<p><img alt="" src="../site/europe7-9_small.jpg" /></p>
+<p><img src="../site/europe7-6_small.jpg" alt="" /></p>
+<p><img src="../site/europe7-9_small.jpg" alt="" /></p>
 <p>and the parks are nice:</p>
-<p><img alt="" src="../site/europe7-8_small.jpg" /></p>
-<p><img alt="" src="../site/europe7-12_small.jpg" /></p>
+<p><img src="../site/europe7-8_small.jpg" alt="" /></p>
+<p><img src="../site/europe7-12_small.jpg" alt="" /></p>
 <p>I named the fields around Greenwich "Jurassic Park" on account of the large
 number and density of giant ravens and geese that saunter around.</p>
 <p>Coming down from the hill we ended up in a town called Blackheath, where we
 stopped into a pub for some food and saw a little local philosophy:</p>
-<p><img alt="" src="../site/europe7-10_small.jpg" /></p>
+<p><img src="../site/europe7-10_small.jpg" alt="" /></p>
 <p>Apparently the pigeons have a lot to be concerned about in London, since even
 pelicans will eat them. What? Yes, in London, pelicans (there are pelicans) eat
 pigeons (which are not fish). If you don't believe me, google it. I must warn
@@ -82,7 +82,7 @@ you, though, it's graphic.</p>
 into central London and pay a quick visit to the British Museum, where I
 observed the Roman god of wine dancing with his panther, as only the Roman god
 of wine can:</p>
-<p><img alt="" src="../site/europe7-11_small.jpg" /></p>
+<p><img src="../site/europe7-11_small.jpg" alt="" /></p>
 <p>Vamos a Madrid!</p>
 <table class="series">
   <tr><th colspan="6">Europe</th></tr>
