--- a/site/india2.html
+++ b/site/india2.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link href="../site/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
 
-  <link href="../site/style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="../site/style.css" />
 
-  <link href="../highlightjs/styles/default.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
   
   <script src="../highlightjs/highlight.pack.js"> </script>
@@ -44,7 +44,7 @@
 <div class="table-of-contents"><ul><li><a href="#india_day_6">India, Day 6</a></li></ul></div>
 
 <h1 id="india_day_6">India, Day 6</h1>
-<p><img alt="" src="../site/india2_38_small.jpg" /></p>
+<p><img src="../site/india2_38_small.jpg" alt="" /></p>
 <p>Copper (II) sulfate is the product of the reaction between copper metal and
 sulfuric acid.  It's water soluble and moderately toxic.</p>
 <p>Copper (II) oxide is the result of the breakdown of Copper (I) oxide in humid
@@ -60,17 +60,17 @@ the tap." The finding is that concentrations of copper in drinking water can
 be as high as 0.483 milligrams per liter of water, though ninety percent of
 samples are below 0.185 milligrams per liter.</p>
 <p>Anyway, here are some pictures of the Taj Mahal:</p>
-<p><img alt="" src="../site/india2_37_small.jpg" /></p>
-<p><img alt="" src="../site/india2_39_small.jpg" /></p>
-<p><img alt="" src="../site/india2_41_small.jpg" /></p>
-<p><img alt="" src="../site/india2_43_small.jpg" /></p>
-<p><img alt="" src="../site/india2_47_small.jpg" /></p>
+<p><img src="../site/india2_37_small.jpg" alt="" /></p>
+<p><img src="../site/india2_39_small.jpg" alt="" /></p>
+<p><img src="../site/india2_41_small.jpg" alt="" /></p>
+<p><img src="../site/india2_43_small.jpg" alt="" /></p>
+<p><img src="../site/india2_47_small.jpg" alt="" /></p>
 <p>You get the idea.  White, pretty, enormous.  Totally my type.  We even saw some
 monkeys:</p>
-<p><img alt="" src="../site/india2_50_small.jpg" /></p>
+<p><img src="../site/india2_50_small.jpg" alt="" /></p>
 <p>I said, "oh, more monkeys!"  Our guide for that day replied, slightly amused,
 "Yes, more monkeys.  Don't go near them."</p>
-<p><img alt="" src="../site/india2_1_small.jpg" /></p>
+<p><img src="../site/india2_1_small.jpg" alt="" /></p>
 <p>The Taj Mahal is in the city of Agra, which is not Delhi.  So, Mr. Singh drove
 us for a few hours through the Indian countryside.  You can probably guess from
 his name that Mr. Singh has a beard and wears a turban, which makes him easy to
@@ -105,7 +105,7 @@ strength strike).</p>
 that I don't have any. In India so far I have taken more pictures of
 pigeons, the undisputed rulers of New York City, than I have of Hindu's
 sacred animal. I'll try to correct this before returning to Delhi.</p>
-<p><img alt="" src="../site/india2_2_small.jpg" /></p>
+<p><img src="../site/india2_2_small.jpg" alt="" /></p>
 <p>We saw more than the Taj Mahal in Agra.  The first tour was of the so-called
 "mini Taj," properly the tomb of I'timād-ud-Daulah.  You can read about the
 history on <a href="https://en.wikipedia.org/wiki/Tomb_of_I%27tim%C4%81d-ud-Daulah">wikipedia</a>.  The thing to note in the pictures is how the white
@@ -116,27 +116,27 @@ I'timād-ud-Daulah.  It ended up looking so badass that, when the Taj Mahal was
 built, they went balls deep with the marble.  The marble was barged over from
 Jaipur on a river.</p>
 <p>Here's the "mini Taj."</p>
-<p><img alt="" src="../site/india2_7_small.jpg" /></p>
-<p><img alt="" src="../site/india2_8_small.jpg" /></p>
-<p><img alt="" src="../site/india2_5_small.jpg" /></p>
-<p><img alt="" src="../site/india2_4_small.jpg" /></p>
+<p><img src="../site/india2_7_small.jpg" alt="" /></p>
+<p><img src="../site/india2_8_small.jpg" alt="" /></p>
+<p><img src="../site/india2_5_small.jpg" alt="" /></p>
+<p><img src="../site/india2_4_small.jpg" alt="" /></p>
 <p>There are two styles of ornamentation at play.  One is inlaid stonework
 (<a href="https://en.wikipedia.org/wiki/Pietra_dura">pietra dura</a>), and the other is mural painting.  In a similar way to how
 the Taj Mahal shed the red stone preferring marble, the Taj Mahal also is
 relatively devoid of murals, instead using extensive pietra dura.</p>
 <p>But that's all pretty boring, isn't it?  Check out these camels.</p>
-<p><img alt="" src="../site/india2_70_small.jpg" /></p>
+<p><img src="../site/india2_70_small.jpg" alt="" /></p>
 <p>As we approached this caravan from afar, Mr. Singh said "look, elephants!"
 After a few seconds I contributed, "they're very small elephants," and I don't
 remember if it was Andrea or Mr. Singh who first admitted that they're camels.
 The lesson here is that you should never mistake a camel for an elephant.
 Thank you for listening.</p>
 <p>My favorite picture so far is this one:</p>
-<p><img alt="" src="../site/india2_129_small.jpg" /></p>
+<p><img src="../site/india2_129_small.jpg" alt="" /></p>
 <p>Rashād watches over all of us from his kingly roost.  <a href="https://en.wikipedia.org/wiki/High-dynamic-range_imaging">HDR</a> is really
 growing on me.</p>
 <p>Speaking of elephants, here is what they look like:</p>
-<p><img alt="" src="../site/india2_75_small.jpg" /></p>
+<p><img src="../site/india2_75_small.jpg" alt="" /></p>
 <p>Yes, we exploited the elephants.  I'm sorry, ok?  To be honest, had we known
 that the item on the tour mentioning elephants was a touristastic ride up a
 hill, we would have left it out; but, the tour is a package, and who knew what
@@ -153,7 +153,7 @@ that car crashes are relatively rare in India due to the low speed of travel,
 but in actuality vehicular deaths are <a href="https://en.wikipedia.org/wiki/List_of_countries_by_traffic-related_death_rate">four times more likely</a> in India than
 they are in the Americas.</p>
 <p>I'm just saying that I wish well for the elephants.  Moving on.</p>
-<p><img alt="" src="../site/india2_93_small.jpg" /></p>
+<p><img src="../site/india2_93_small.jpg" alt="" /></p>
 <p>Ok, one more thing about the elephants.  Two things.  The first is that Andrea
 had the sensibility to greet the elephant once we dismounted it, and earlier
 asked the <a href="https://en.wikipedia.org/wiki/Mahout">mahout</a> what the elephant's name is, how old she is, and how
@@ -169,30 +169,30 @@ a decent shot of you, and then presumably later pressure you to pay them for
 the photographs.  We suffered no such trouble, but once we got to the top, I
 was amused to get the "behind the scenes" shot.</p>
 <p>Here is a picture of doorframes framing door frames.
-<img alt="" src="../site/india2_66_small.jpg" /></p>
+<img src="../site/india2_66_small.jpg" alt="" /></p>
 <p>Here is a picture of someone taking a picture of doorframes framing doorframes.
-<img alt="" src="../site/india2_65_small.jpg" /></p>
+<img src="../site/india2_65_small.jpg" alt="" /></p>
 <p>We need to go deeper.</p>
 <p>Here is a picture of a blog post being prepared about a picture of someone
 taking a picture of doorframes framing doorframes.
-<img alt="" src="../site/india2_155_small.jpg" /></p>
+<img src="../site/india2_155_small.jpg" alt="" /></p>
 <p>Here is a picture of Asha the cat.
-<img alt="" src="../site/asha2_small.jpg" /></p>
+<img src="../site/asha2_small.jpg" alt="" /></p>
 <p>We saw a bunch of palaces.  The Mughals moved here, and then they moved there,
 and then they moved back again, and then a prince killed his brothers and
 imprisoned his father and somebody built the Taj Mahal.  I'm probably getting
 some of this wrong.  People died, it was all deadly serious.  Also, harems.</p>
 <p>The first palace was inside of a fort.  If you look closely, there are cows.
-<img alt="" src="../site/india2_9_small.jpg" /></p>
+<img src="../site/india2_9_small.jpg" alt="" /></p>
 <p>Inside of the fort, there are multiple layers of defensive obstacles.  There
 are attack monkeys,
-<img alt="" src="../site/india2_11_small.jpg" /></p>
+<img src="../site/india2_11_small.jpg" alt="" /></p>
 <p>boulder corridors of death,
-<img alt="" src="../site/india2_12_small.jpg" /></p>
+<img src="../site/india2_12_small.jpg" alt="" /></p>
 <p>and arresting views of the vast, lush landscape that would pull invaders into
 a state of placid reflection, whence they can be slain by arrows or boiling
 oil.
-<img alt="" src="../site/india2_19_small.jpg" /></p>
+<img src="../site/india2_19_small.jpg" alt="" /></p>
 <p>The guy in the picture was our tour guide in Agra.  He was alright.  I found
 him off-putting in a subtle way.  There was a rote thinness to his
 presentation, and he more often deflected questions than answered them.  Andrea
@@ -202,16 +202,16 @@ same way in the same places nearly every day for years and years.  Sometimes,
 after an energetic monologue, he would turn away and sigh.</p>
 <p>The fort palace has three notable sections.  The first is the courtyard where
 the king would address a private audience.  It's real fancy.</p>
-<p><img alt="" src="../site/india2_14_small.jpg" /></p>
-<p><img alt="" src="../site/india2_17_small.jpg" /></p>
-<p><img alt="" src="../site/india2_18_small.jpg" /></p>
+<p><img src="../site/india2_14_small.jpg" alt="" /></p>
+<p><img src="../site/india2_17_small.jpg" alt="" /></p>
+<p><img src="../site/india2_18_small.jpg" alt="" /></p>
 <p>The second section is the king's private quarters, which is even fancier.</p>
-<p><img alt="" src="../site/india2_20_small.jpg" /></p>
-<p><img alt="" src="../site/india2_21_small.jpg" /></p>
+<p><img src="../site/india2_20_small.jpg" alt="" /></p>
+<p><img src="../site/india2_21_small.jpg" alt="" /></p>
 <p>The last section is the courtyard where the king would address a public
 audience.  I'm not sure what is meant by "public."</p>
-<p><img alt="" src="../site/india2_23_small.jpg" /></p>
-<p><img alt="" src="../site/india2_24_small.jpg" /></p>
+<p><img src="../site/india2_23_small.jpg" alt="" /></p>
+<p><img src="../site/india2_24_small.jpg" alt="" /></p>
 <p>One of the kings married three wives: a Muslim, a Christian, and a Hindu.  The
 Muslim wife lived in a lavishly decorated shoebox.  The Christian wife lived
 in a small flat (I found dubious the tour guide's claim that the hallway's
@@ -221,12 +221,12 @@ wife that bore the king fourteen children, so they were definitely doing it.
 The other token wives did not bear the king any children.</p>
 <p>Here are some pictures of the palace in which the king, his three wives, and a
 ton of other people temporarily lived while away from the fort.</p>
-<p><img alt="" src="../site/india2_54_small.jpg" /></p>
-<p><img alt="" src="../site/india2_56_small.jpg" /></p>
-<p><img alt="" src="../site/india2_57_small.jpg" /></p>
-<p><img alt="" src="../site/india2_58_small.jpg" /></p>
-<p><img alt="" src="../site/india2_60_small.jpg" /></p>
-<p><img alt="" src="../site/india2_69_small.jpg" /></p>
+<p><img src="../site/india2_54_small.jpg" alt="" /></p>
+<p><img src="../site/india2_56_small.jpg" alt="" /></p>
+<p><img src="../site/india2_57_small.jpg" alt="" /></p>
+<p><img src="../site/india2_58_small.jpg" alt="" /></p>
+<p><img src="../site/india2_60_small.jpg" alt="" /></p>
+<p><img src="../site/india2_69_small.jpg" alt="" /></p>
 <p>These tours do this thing that's new to me.  Mr. Singh motivated it for us on
 the way from Delhi to Agra.  You go to a showroom adjacent to a factory where
 some good is made, such as marble pietra dura, textiles, or jewelry.  In the
@@ -267,14 +267,14 @@ convey emotion using my facial muscles.  Also I hate everybody.</p>
 <p>The friendly and slightly avian jewelry salesman told me point blank,
 "smile, won't you?"  I smiled and told him that we were tired.</p>
 <p>For example, behold this impromptu pout:</p>
-<p><img alt="" src="../site/rbf_small.jpg" /></p>
+<p><img src="../site/rbf_small.jpg" alt="" /></p>
 <p>The elephants were leading us up to a palace on a hill, my favorite palace of
 the trip:</p>
-<p><img alt="" src="../site/india2_77_small.jpg" /></p>
-<p><img alt="" src="../site/india2_89_small.jpg" /></p>
-<p><img alt="" src="../site/india2_98_small.jpg" /></p>
-<p><img alt="" src="../site/india2_103_small.jpg" /></p>
-<p><img alt="" src="../site/india2_108_small.jpg" /></p>
+<p><img src="../site/india2_77_small.jpg" alt="" /></p>
+<p><img src="../site/india2_89_small.jpg" alt="" /></p>
+<p><img src="../site/india2_98_small.jpg" alt="" /></p>
+<p><img src="../site/india2_103_small.jpg" alt="" /></p>
+<p><img src="../site/india2_108_small.jpg" alt="" /></p>
 <p>Our tour guide in Jaipur was much better than the previous.  It was a state
 secret how that silver shone for so many years without tarnishing.  Such
 secrets were kept by a family of artisans.  A metalworker would not even tell
@@ -285,26 +285,26 @@ since they were more part of his family, at least politically.</p>
 wondered whether working with the mercury caused health problems, and so I
 told her about the <a href="https://en.wikipedia.org/wiki/Mad_as_a_hatter">mad hatters</a>.</p>
 <p>There were many things to look at.</p>
-<p><img alt="" src="../site/india2_101_small.jpg" /></p>
-<p><img alt="" src="../site/india2_114_small.jpg" /></p>
-<p><img alt="" src="../site/india2_119_small.jpg" /></p>
-<p><img alt="" src="../site/india2_121_small.jpg" /></p>
-<p><img alt="" src="../site/india2_122_small.jpg" /></p>
-<p><img alt="" src="../site/india2_125_small.jpg" /></p>
-<p><img alt="" src="../site/india2_110_small.jpg" /></p>
+<p><img src="../site/india2_101_small.jpg" alt="" /></p>
+<p><img src="../site/india2_114_small.jpg" alt="" /></p>
+<p><img src="../site/india2_119_small.jpg" alt="" /></p>
+<p><img src="../site/india2_121_small.jpg" alt="" /></p>
+<p><img src="../site/india2_122_small.jpg" alt="" /></p>
+<p><img src="../site/india2_125_small.jpg" alt="" /></p>
+<p><img src="../site/india2_110_small.jpg" alt="" /></p>
 <p>Does the following building look to you like it's partially submerged?</p>
-<p><img alt="" src="../site/india2_134_small.jpg" /></p>
+<p><img src="../site/india2_134_small.jpg" alt="" /></p>
 <p>There's an 18th Century observatory in Jaipur, where giant instruments are made
 of stone.  For example, this building is a sundial.  It <em>is</em> a sundial.</p>
-<p><img alt="" src="../site/india2_144_small.jpg" /></p>
-<p><img alt="" src="../site/india2_146_small.jpg" /></p>
+<p><img src="../site/india2_144_small.jpg" alt="" /></p>
+<p><img src="../site/india2_146_small.jpg" alt="" /></p>
 <p>The triangular steppy thing casts a shadow on the curved marble thing, and on
 the latter are marked two-second increments.  On a morning with good direct
 sunlight, you could watch the shadow crawl across the ticks in real time.</p>
-<p><img alt="" src="../site/india2_138_small.jpg" /></p>
+<p><img src="../site/india2_138_small.jpg" alt="" /></p>
 <p>Here is an image of the dome of the night sky, carved in stone:</p>
-<p><img alt="" src="../site/india2_140_small.jpg" /></p>
-<p><img alt="" src="../site/india2_139_small.jpg" /></p>
+<p><img src="../site/india2_140_small.jpg" alt="" /></p>
+<p><img src="../site/india2_139_small.jpg" alt="" /></p>
 <p>There are two versions, each omitting half of the sky to make room for
 astonomers and/or astrologers to stand and take measurements.  Simple solution,
 no?</p>
@@ -313,17 +313,17 @@ its tip on one of the little rectangles. As the sun moves across the sky,
 you can plot the curve of its transit, and from this deduce the current
 inclination of the Earth in the plane of the solar system, and probably a bunch
 of other things.</p>
-<p><img alt="" src="../site/india2_152_small.jpg" /></p>
+<p><img src="../site/india2_152_small.jpg" alt="" /></p>
 <p>Next we went to a museum on the grounds of the current royal family of Jaipur,
 but we wouldn't take pictures inside.  Nearby, there was this:</p>
-<p><img alt="" src="../site/india2_154_small.jpg" /></p>
+<p><img src="../site/india2_154_small.jpg" alt="" /></p>
 <p>I forget what it is, but it looks cool.</p>
 <p>We were thoroughly pooped when we returned to the hotel late that afternoon.
 They also moved us into a room with two proper beds, so Andrea could end her
 stay on the cot from the previous night.</p>
 <p>Today is a down day.  We might do something this afternoon, and we might not.
 There is a nice pool.  Tonight is a cooking class.
-<img src="../site/hindi.png" style="width: 200px;" /></p>
+<img style="width: 200px;" src="../site/hindi.png" /></p>
 <table class="series">
   <tr><th colspan="6">India</th></tr>
   <tr>
