--- a/site/llama-json.html
+++ b/site/llama-json.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link href="../site/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
 
-  <link href="../site/style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="../site/style.css" />
 
-  <link href="../highlightjs/styles/default.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
   
   <script src="../highlightjs/highlight.pack.js"> </script>
@@ -44,7 +44,7 @@
 <div class="table-of-contents"><ul><li><a href="#llama_json">Llama JSON</a><ul><li><a href="#its_a_macro">It's a Macro</a></li><li><a href="#dealing_with_null">Dealing with null</a></li><li><a href="#distinguishing_arrays_from_objects">Distinguishing Arrays from Objects</a></li><li><a href="#empty_objects_and_arrays">Empty Objects and Arrays</a></li><li><a href="#numbers_and_jsonstringify">Numbers and JSON.stringify</a></li><li><a href="#helper_procedure">Helper Procedure</a></li><li><a href="#the_json_macro">The json Macro</a></li><li><a href="#example">Example</a></li></ul></li></ul></div>
 
 <h1 id="llama_json">Llama JSON</h1>
-<p><img alt="" src="../site/llama.jpg" /> <img alt="" src="../site/json.gif" /></p>
+<p><img src="../site/llama.jpg" alt="" /> <img src="../site/json.gif" alt="" /></p>
 <p>Playing with a <a href="https://github.com/dgoffredo/llama">pet project</a>, I noticed a relationship between
 <a href="https://en.wikipedia.org/wiki/S-expression">s-expressions</a> and <a href="https://en.wikipedia.org/wiki/JSON">JSON</a>.</p>
 <p>The following JSON is also valid <a href="https://github.com/dgoffredo/llama">Llama</a>:</p>
