--- a/site/europe1.html
+++ b/site/europe1.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link href="../site/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
 
-  <link href="../site/style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="../site/style.css" />
 
-  <link href="../highlightjs/styles/default.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
   
   <script src="../highlightjs/highlight.pack.js"> </script>
@@ -44,7 +44,7 @@
 <div class="table-of-contents"><ul><li><a href="#europe_day_1">Europe, Day 1</a></li></ul></div>
 
 <h1 id="europe_day_1">Europe, Day 1</h1>
-<p><img alt="" src="../site/vineet_ice_small.jpg" />
+<p><img src="../site/vineet_ice_small.jpg" alt="" />
 <em>Vineet copes with the low coefficient of friction in Iceland.</em></p>
 <p>Morning from the North,</p>
 <p>Vineet and I got in just before midnight Iceland time last night. Immigration
