--- a/site/india1.html
+++ b/site/india1.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link href="../site/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
 
-  <link href="../site/style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="../site/style.css" />
 
-  <link href="../highlightjs/styles/default.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
   
   <script src="../highlightjs/highlight.pack.js"> </script>
@@ -44,7 +44,7 @@
 <div class="table-of-contents"><ul><li><a href="#india_day_1">India, Day 1</a></li></ul></div>
 
 <h1 id="india_day_1">India, Day 1</h1>
-<p><img alt="dog" src="../site/india_20_small.jpg" /></p>
+<p><img src="../site/india_20_small.jpg" alt="dog" /></p>
 <p>This is Aniruddha Ram Kumar Mukherjee.  He is a dog.  Like many natives of
 Delhi, Aniruddha must find ways to cope with the oppressive afternoon summer
 heat.  A quick nap on a bench can help pass by the hottest part of the day.</p>
@@ -67,18 +67,18 @@ impressively symmetrical example of Mughal architecture (the tomb, not the
 bathrooms — though the bathrooms were nice, too). It looks the same from all
 four sides, such that when you walk out of it you don't know which side
 you're on. You must travel with somebody who knows which side you're on.</p>
-<p><img alt="symmetry" src="../site/india_11_small.jpg" /></p>
+<p><img src="../site/india_11_small.jpg" alt="symmetry" /></p>
 <p>Inside of the tomb are nooks and crannies, domes and doves and a human thumb
 that kept photobombing me.  There are no dead bodies, though.  Those are
 allegedly kept underneath the tomb, off limits, to be sanctified by elected
 officials at regular intervals.</p>
-<p><img alt="thumb" src="../site/india_16_small.jpg" /></p>
-<p><img alt="window" src="../site/india_17_small.jpg" /></p>
-<p><img alt="ceiling" src="../site/india_18_small.jpg" /></p>
+<p><img src="../site/india_16_small.jpg" alt="thumb" /></p>
+<p><img src="../site/india_17_small.jpg" alt="window" /></p>
+<p><img src="../site/india_18_small.jpg" alt="ceiling" /></p>
 <p>The grounds surrounding the tomb are a grid of sixteen patches of lawn
 landscaped with lime trees, jasmine, shrubs, one of Aniruddha's cousins, and my
 thumb.</p>
-<p><img alt="lawn" src="../site/india_13_small.jpg" /></p>
+<p><img src="../site/india_13_small.jpg" alt="lawn" /></p>
 <p>The trip started out on one of Emirates' Airbus A380 super mega mondo grande
 venti mocha soymilk airplanes, or as it's referred to in the industry: "that
 big fucking plane."  The plane is so big that if you're sitting over the wing,
@@ -96,7 +96,7 @@ along New York's line of latitude (we weren't), then we would have been
 experiencing the passage of the sun at 186% its normal rate, which I think is a
 pretty good deal.  Also I had the whole row to myself, so I could lie down and
 torture everyone with my snoring.</p>
-<p><img alt="plane" src="../site/india_1_small.jpg" /></p>
+<p><img src="../site/india_1_small.jpg" alt="plane" /></p>
 <p>That flight was twelve hours long.  We were late getting out of JFK, and so we
 had to hustle our way across the Dubai airport to make our three hour
 connecting flight to Delhi.</p>
@@ -115,7 +115,7 @@ have been sleeping on an auxiliary bed.  Look, I get it, people.  I get it.</p>
 <p>That evening Vineet (the groom) reached out to us and invited us to come over
 to his place for dinner, to meet his father and hang out with his mother and
 Asha (the bride, not the cat).  Here is a picture of Asha the cat:</p>
-<p><img alt="asha" src="../site/asha_small.jpg" /></p>
+<p><img src="../site/asha_small.jpg" alt="asha" /></p>
 <p>Andrea and I nearly fell asleep at the dinner table, and so we politely ate and
 ran to an Uber who "had a GPS malfunction" and so took twice the time to get
 us back to the hotel, where we passed out immediately.</p>
@@ -137,35 +137,35 @@ That is, you are required not to wear shoes. The cooks don't wear shoes
 either.</p>
 <p>Also, you must cover your hair, because that is how the Sikhs do.  There's this
 guy:</p>
-<p><img alt="david" src="../site/india_6_small.jpg" /></p>
+<p><img src="../site/india_6_small.jpg" alt="david" /></p>
 <p>and then there's Andrea:</p>
-<p><img alt="andrea" src="../site/india_5_small.jpg" /></p>
+<p><img src="../site/india_5_small.jpg" alt="andrea" /></p>
 <p>Young Indian men kept coming up to Andrea and asking whether they could take
 a picture with her, but I have yet to figure out why.</p>
 <p>After that we walked around a big old fort/palace, "the city within a city"</p>
-<p><img alt="fort" src="../site/india_7_small.jpg" /></p>
+<p><img src="../site/india_7_small.jpg" alt="fort" /></p>
 <p>Here is a picture of where Gandhi was cremated:</p>
-<p><img alt="gandhi" src="../site/india_9_small.jpg" /></p>
+<p><img src="../site/india_9_small.jpg" alt="gandhi" /></p>
 <p>Here is another tomb:</p>
-<p><img alt="motomb" src="../site/india_21_small.jpg" /></p>
+<p><img src="../site/india_21_small.jpg" alt="motomb" /></p>
 <p>Here are two of my fingers, with a tower in the background:</p>
-<p><img alt="tower" src="../site/india_24_small.jpg" /></p>
+<p><img src="../site/india_24_small.jpg" alt="tower" /></p>
 <p>Here is the tower closer:</p>
-<p><img alt="motower" src="../site/india_28_small.jpg" /></p>
+<p><img src="../site/india_28_small.jpg" alt="motower" /></p>
 <p>Here are two of my fingers, a woman, and one of the archways of what remains of
 a mosque that was built out of the demolished remains of multiple Hindu
 temples.  They removed all of the faces of the various depictions of Hindu
 gods, because Allah is the one true god, right?  Right?</p>
-<p><img alt="wall" src="../site/india_25_small.jpg" /></p>
+<p><img src="../site/india_25_small.jpg" alt="wall" /></p>
 <p>Oh yeah, earlier in the day we also walked around the parliamentary buildings
 and saw distant views of an arch and the Prime Minister's mansion.  Here you
 are:</p>
-<p><img alt="" src="../site/india_2_small.jpg" /></p>
-<p><img alt="" src="../site/india_3_small.jpg" /></p>
-<p><img alt="" src="../site/india_4_small.jpg" /></p>
+<p><img src="../site/india_2_small.jpg" alt="" /></p>
+<p><img src="../site/india_3_small.jpg" alt="" /></p>
+<p><img src="../site/india_4_small.jpg" alt="" /></p>
 <p>At some point we ate dinner, and the food was delicious.  Now it is nearly one
 o'clock in the morning, and I am going to bed.</p>
-<p><img src="../site/hindi.png" style="width: 200px;" /></p>
+<p><img style="width: 200px;" src="../site/hindi.png" /></p>
 <table class="series">
   <tr><th colspan="6">India</th></tr>
   <tr>
