--- a/site/india3.html
+++ b/site/india3.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link href="../site/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
 
-  <link href="../site/style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="../site/style.css" />
 
-  <link href="../highlightjs/styles/default.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
   
   <script src="../highlightjs/highlight.pack.js"> </script>
@@ -44,19 +44,19 @@
 <div class="table-of-contents"><ul><li><a href="#india_day_8">India, Day 8</a></li></ul></div>
 
 <h1 id="india_day_8">India, Day 8</h1>
-<p><img alt="" src="../site/india3_5_small.jpg" /></p>
+<p><img src="../site/india3_5_small.jpg" alt="" /></p>
 <p>I promised you a cow.  You know, I won't be eating them for a while.  It's just
 not right.  Well, I might have eaten some of them today.  More on that later.</p>
 <p>It wasn't just one, either.  There are at least three cows in India.  I saw one
 chewing on a newspaper from a garbage pile.  Some are employed as roadside
 landscapers.</p>
-<p><img alt="" src="../site/india3_1_small.jpg" /></p>
+<p><img src="../site/india3_1_small.jpg" alt="" /></p>
 <p>In the morning, we got into Mr. Singh's car for the considerable drive back to
 Delhi.  The road is farms and truck stops across the semi-arid landscape.</p>
-<p><img alt="" src="../site/india3_2_small.jpg" /></p>
+<p><img src="../site/india3_2_small.jpg" alt="" /></p>
 <p>Unlike in Agra, these cows have impressive horns.</p>
-<p><img alt="" src="../site/india3_6_small.jpg" /></p>
-<p><img alt="" src="../site/legend_small.jpg" /></p>
+<p><img src="../site/india3_6_small.jpg" alt="" /></p>
+<p><img src="../site/legend_small.jpg" alt="" /></p>
 <p>At the halfway point, we stopped at a roadside hotel with an attached café.
 The owner (the man was, as I later found out) has a family member in tech at
 Morgan Stanley, and his son is studying "big data" in Kerala.  Andrea had chai
@@ -70,7 +70,7 @@ professionals we met on our tour have done this a million times and know
 what gets a good response from us the customers.  On the other hand, I
 sometimes thought we were a resource being passed through a quiet network of
 receivers.</p>
-<p><img alt="" src="../site/india3_7_small.jpg" /></p>
+<p><img src="../site/india3_7_small.jpg" alt="" /></p>
 <p>We got back to Delhi just in time, as my bladder was about to explode.
 They gave us a room with two beds.  They had guilty looks on their faces and
 upgraded us to a larger room, with a refrigerator.  Serves them right.  Finally
@@ -79,7 +79,7 @@ somewhere to put the cheap champagne that Mr. Singh gifted us.</p>
 alcohol by volume, is probably derived from grapes, and contains carbon
 dioxide, but aside from these things it more resembles fortified Kool-Aid.  I
 will drink it.</p>
-<p><img alt="" src="../site/india3_18_small.jpg" /></p>
+<p><img src="../site/india3_18_small.jpg" alt="" /></p>
 <p>At 4:30 we were back in the car on our way to a walking tour of
 <a href="https://en.wikipedia.org/wiki/Old_Delhi">Old Delhi's</a> street foods.  Our guide was an adorable college student from
 Bangladesh or a nearby Indian territory.  She's studying creative writing.  She
@@ -89,7 +89,7 @@ so fast and rough that she has yet to find somebody who can hang with her.</p>
 <p>We ate a lot of food.  Andrea and I skipped lunch, but it didn't seem to help.</p>
 <p>I'm not moved by food.  That's not to say I don't enjoy good food, which it all
 was.  It's just that I have trouble focusing on food.</p>
-<p><img alt="" src="../site/india3_15_small.jpg" /></p>
+<p><img src="../site/india3_15_small.jpg" alt="" /></p>
 <p>That being said, we sampled quite the spread as we squeezed through the crowded
 streets of Old Delhi, sometimes hopping on a rickshaw to reach another
 neighborhood.  We had:</p>
@@ -122,15 +122,15 @@ didn't manage a good photo.</li>
 office than an ice cream shop.  Andrea liked the fruit flavors, whereas I
 think I preferred the nuts.</li>
 </ul>
-<p><img alt="" src="../site/india3_25_small.jpg" /></p>
-<p><img alt="" src="../site/india3_23_small.jpg" /></p>
+<p><img src="../site/india3_25_small.jpg" alt="" /></p>
+<p><img src="../site/india3_23_small.jpg" alt="" /></p>
 <p>We began with another Sikh temple, and along the way there was a quiet street
 of Jain households.  After kulfi we rickshawed back to the car, where our guide
 seemed oddly interested in keeping far away from our driver.</p>
 <p>So ended the street food walking tour.</p>
 <p>On the way back, we stopped to get some cash for tipping Mr. Singh, as it would
 be our last drive with him.</p>
-<p><img alt="" src="../site/india3_26_small.jpg" /></p>
+<p><img src="../site/india3_26_small.jpg" alt="" /></p>
 <p>Thanks for the jungle juice.</p>
 <table class="series">
   <tr><th colspan="6">India</th></tr>
