--- a/site/india5.html
+++ b/site/india5.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link href="../site/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
 
-  <link href="../site/style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="../site/style.css" />
 
-  <link href="../highlightjs/styles/default.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
   
   <script src="../highlightjs/highlight.pack.js"> </script>
@@ -44,7 +44,7 @@
 <div class="table-of-contents"><ul><li><a href="#india_day_13">India, Day 13</a></li></ul></div>
 
 <h1 id="india_day_13">India, Day 13</h1>
-<p><img alt="" src="../site/india5_28_small.jpg" /></p>
+<p><img src="../site/india5_28_small.jpg" alt="" /></p>
 <p>One of the unsung advantages of having acute diarrhea is the ability to use the
 little flush button instead of the big one.  As you can imagine, I've been
 spending plenty of time reading about the properties of loperamide.  For
@@ -62,15 +62,15 @@ perseverance, the human condition, and my anus.</p>
 currently rather medicated, but I think the worst is behind me anyway.  Enough
 about that.</p>
 <p>I'm on a boat!  But first, the mountains.</p>
-<p><img alt="" src="../site/india5_29_small.jpg" /></p>
+<p><img src="../site/india5_29_small.jpg" alt="" /></p>
 <p>That's the view from my room.  <em>My</em> room.  Here's the view from the shower.</p>
-<p><img alt="" src="../site/india5_32_small.jpg" /></p>
+<p><img src="../site/india5_32_small.jpg" alt="" /></p>
 <p>Yes, the shower.  Maybe it's so that you can get natural light into the
 bathroom during the day, or maybe people in Kerala like to watch each other
 wash.</p>
 <p>We got a tour of a tea factory, but photography was not allowed inside.  It's
 a shame, too, because the facility was way cool.</p>
-<p><img alt="" src="../site/india5_36_small.jpg" /></p>
+<p><img src="../site/india5_36_small.jpg" alt="" /></p>
 <p>Next to the factory was a "museum".  The items exhibited included:</p>
 <ul>
 <li>a brick</li>
@@ -79,15 +79,15 @@ a shame, too, because the facility was way cool.</p>
 <li>an aspee bolo motorized knapsack mist blower cum duster</li>
 </ul>
 <p>What, you think I made one up?</p>
-<p><img alt="" src="../site/india5_37_small.jpg" /></p>
+<p><img src="../site/india5_37_small.jpg" alt="" /></p>
 <p>There were some nice views from the factory grounds.</p>
-<p><img alt="" src="../site/india5_41_small.jpg" /></p>
-<p><img alt="" src="../site/india5_40_small.jpg" /></p>
-<p><img alt="" src="../site/india5_48_small.jpg" /></p>
-<p><img alt="" src="../site/india5_45_small.jpg" /></p>
+<p><img src="../site/india5_41_small.jpg" alt="" /></p>
+<p><img src="../site/india5_40_small.jpg" alt="" /></p>
+<p><img src="../site/india5_48_small.jpg" alt="" /></p>
+<p><img src="../site/india5_45_small.jpg" alt="" /></p>
 <p>With Asha for scale.</p>
 <p>On the way to the hotel, we stopped for lunch at an outdoor restaurant.</p>
-<p><img alt="" src="../site/india5_4_small.jpg" /></p>
+<p><img src="../site/india5_4_small.jpg" alt="" /></p>
 <p>Was I inoculated here?  Or was it the dumplings I had some hours earlier at the
 airport (they at least were freshly boiled)?  I don't know, but when the owner
 saw my confusion as I looked at my plate, he asked "serve?"  I said, "no, I
@@ -99,37 +99,37 @@ treacherous and the beauty is extreme.  Clouds float at arms length in the
 valleys below, and occasionally rise to engulf everything in a thick fog, which
 depending on whether the sun is shining, is either a cool mist or an intense
 sauna.</p>
-<p><img alt="" src="../site/india5_8_small.jpg" /></p>
+<p><img src="../site/india5_8_small.jpg" alt="" /></p>
 <p>Here is our driver, Arun, and one of our traveling companions, Shaun (and some
 other guy):</p>
-<p><img alt="" src="../site/india5_14_small.jpg" /></p>
+<p><img src="../site/india5_14_small.jpg" alt="" /></p>
 <p>Arun stopped at a couple of waterfalls by the roadside.</p>
-<p><img alt="" src="../site/india5_15_small.jpg" /></p>
-<p><img alt="" src="../site/india5_12_small.jpg" /></p>
+<p><img src="../site/india5_15_small.jpg" alt="" /></p>
+<p><img src="../site/india5_12_small.jpg" alt="" /></p>
 <p>Leave no stone untrashed.</p>
 <p>The area surrounding the hotel is all tea plantations.</p>
-<p><img alt="" src="../site/india5_53_small.jpg" /></p>
-<p><img alt="" src="../site/india5_54_small.jpg" /></p>
+<p><img src="../site/india5_53_small.jpg" alt="" /></p>
+<p><img src="../site/india5_54_small.jpg" alt="" /></p>
 <p>That's what tea looks like.  Now you know.</p>
 <p>One of our activities was to walk up a hill in a national park.  Something
 about an endangered antelope deer thing.  Didn't see any.  It was raining,
 though, which allowed more interesting pictures.</p>
-<p><img alt="" src="../site/india5_67_small.jpg" /></p>
-<p><img alt="" src="../site/india5_60_small.jpg" /></p>
-<p><img alt="" src="../site/india5_64_small.jpg" /></p>
+<p><img src="../site/india5_67_small.jpg" alt="" /></p>
+<p><img src="../site/india5_60_small.jpg" alt="" /></p>
+<p><img src="../site/india5_64_small.jpg" alt="" /></p>
 <p>Bear in mind that if I were to relax even for a moment, dark toxic sludge would
 explode into my pants.</p>
 <p>Here's a cat.</p>
-<p><img alt="" src="../site/india5_73_small.jpg" /></p>
+<p><img src="../site/india5_73_small.jpg" alt="" /></p>
 <p>Our last stop was fittingly a dam <em>about to burst</em>:</p>
-<p><img alt="" src="../site/india5_80_small.jpg" /></p>
-<p><img alt="" src="../site/india5_82_small.jpg" /></p>
+<p><img src="../site/india5_80_small.jpg" alt="" /></p>
+<p><img src="../site/india5_82_small.jpg" alt="" /></p>
 <p>We got back to the hotel before 7 PM, and I immediately slept.  I woke up at
 midnight, drank some water, and slept again until 6 AM.</p>
 <p>The view in the morning is even better.</p>
-<p><img alt="" src="../site/india5_83_small.jpg" /></p>
+<p><img src="../site/india5_83_small.jpg" alt="" /></p>
 <p>Then it was another five hour drive, this time into the backwaters.</p>
-<p><img src="../site/hindi.png" style="width: 200px;" /></p>
+<p><img style="width: 200px;" src="../site/hindi.png" /></p>
 <table class="series">
   <tr><th colspan="6">India</th></tr>
   <tr>
