--- a/site/russia2.html
+++ b/site/russia2.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link href="../site/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
 
-  <link href="../site/style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="../site/style.css" />
 
-  <link href="../highlightjs/styles/default.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
   
   <script src="../highlightjs/highlight.pack.js"> </script>
@@ -53,8 +53,8 @@ drove around until we ended up at the Chruch of Christ the Savior. The plan
 was to check out the church and then to take a short boat trip along the
 Moscow river, but I'm guessing that the schedules did not align, so instead
 we did just the boat ride, which was nice.</p>
-<p><img alt="" src="../site/russia2-1_small.jpg" /></p>
-<p><img alt="" src="../site/russia2-4_small.jpg" /></p>
+<p><img src="../site/russia2-1_small.jpg" alt="" /></p>
+<p><img src="../site/russia2-4_small.jpg" alt="" /></p>
 <p>After that, the sun was beginning to set, and we drove to a theater across
 the river from "Moscow City," which is the skyscraping financial district of
 Moscow. None of the buildings there are much more than ten years old. Since
@@ -63,8 +63,8 @@ a skyscraper would have been built only if a bureau decided to build one,
 which I'm guessing would have been an excessive expenditure. I always had
 assumed that any sufficiently large hub of industry and urbanity would have
 a district of tall buildings, but not in the Soviet Union.</p>
-<p><img alt="" src="../site/russia2-3_small.jpg" /></p>
-<p><img alt="" src="../site/russia2-2_small.jpg" /></p>
+<p><img src="../site/russia2-3_small.jpg" alt="" /></p>
+<p><img src="../site/russia2-2_small.jpg" alt="" /></p>
 <p>A relative of Gregory's (and Pasha's) works as chief engineer at the
 theater. We met him at the theater to mooch off of the employees' cafeteria
 for dinner as it was closing – chicken soup and "Navy macaroni," and tea, of
