--- a/site/mexico3.html
+++ b/site/mexico3.html
@@ -84,6 +84,9 @@ had leeks before.</p>
 <p><img src="../site/mexico_31_small.jpg" alt="" /></p>
 <p>I also cooked a big batch of my <a href="https://www.littlebroken.com/one-pot-chicken-stew/">chicken stew</a> last night, but I don't
 have any pictures.</p>
+<p>There's a tiny sorbet store of great renown near Grace's parents' place. She
+got strawberry and I got tamarind.</p>
+<p><img src="../site/mexico_32_small.jpg" alt="" /></p>
 <p>The real culinary innovation of the trip so far is how to eat fruit.  In Mexico
 there are two magical condiments that form a dyad of fruictific perfection:
 <a href="https://en.wikipedia.org/wiki/Chamoy">chamoy</a> and <a href="https://en.wikipedia.org/wiki/Taj%C3%ADn_(seasoning)">tajín</a>.  They balance the sweetness of fruit with tart,
